--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?bwthvn#1" target="_blank">首页</a> | <a href="https://d265ujbtchne9r.cloudfront.net/1?vuqhgxdhr" target="_blank">动态网</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/2?ewoqnpzvm" target="_blank">大纪元</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/4?fezeecfu" target="_blank">看中国</a> | <a href="https://d282b678eon3c.cloudfront.net/pHh5q?auxeptfw" target="_blank">新生网</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/tktpt?bngao" target="_blank">阿波罗网</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/Mjpvu?dtbcdjqh" target="_blank">干净世界</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/10?wcobgxw" target="_blank">退党服务</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/Rffqf?zbazdp" target="_blank">明慧广播</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/nw9Vn?gzkety" target="_blank">传奇时代</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/AF9AG?ovnrt" target="_blank">新境界影视</a> | <a href="https://d3bo5docy69ast.cloudfront.net/zqMQA?bgnfttv" target="_blank">文昭谈论</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/7?seoga" target="_blank">明慧</a></p><p><a href="https://dnuodzs8nln8v.cloudfront.net/9?ableifj" target="_blank">大法</a> | <a href="https://dfxrfb9070id6.cloudfront.net/3?frdfud" target="_blank">新唐人</a> | <a href="https://dmepc9x6zy689.cloudfront.net/obAhT?mhgbcmncx" target="_blank">人民报</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/xXNHu?rqfgueyd" target="_blank">放光明</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/5?dqhgm" target="_blank">新纪元</a> | <a href="https://d78f5frq5siq8.cloudfront.net/6?tyydko" target="_blank">希望之声</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/11?gcfwipvm" target="_blank">无界网络</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/Pueji?jscvchh" target="_blank">追查国际</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/16?gygnmls" target="_blank">明慧之窗</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/LdvzZ?zwsxf" target="_blank">细语人生</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/fBn3r?fdzfmjrjp" target="_blank">新世纪影视</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/PUWMb?mlerfhtr" target="_blank">江峰时刻</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/8?wfppnqoe" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ccpqxknd#1" target="_blank">首页</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/1?wunukt" target="_blank">动态网</a> | <a href="https://d265ujbtchne9r.cloudfront.net/2?rjhov" target="_blank">大纪元</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/4?yhfho" target="_blank">看中国</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/pHh5q?kmtptpd" target="_blank">新生网</a> | <a href="https://dfxrfb9070id6.cloudfront.net/tktpt?jseklrj" target="_blank">阿波罗网</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/Mjpvu?nujodfcg" target="_blank">干净世界</a> | <a href="https://dme0bxbvomkno.cloudfront.net/10?ftcmak" target="_blank">退党服务</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/Rffqf?ujcqgnmlu" target="_blank">明慧广播</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/nw9Vn?nzofotmc" target="_blank">传奇时代</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/AF9AG?clvunzasi" target="_blank">新境界影视</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/zqMQA?jksfx" target="_blank">文昭谈论</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/7?vptssgfur" target="_blank">明慧</a></p><p><a href="https://d2vpfo96xp4pjo.cloudfront.net/9?uejeyr" target="_blank">大法</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/3?lhyukmkq" target="_blank">新唐人</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/obAhT?lrcsv" target="_blank">人民报</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/xXNHu?xzzhsvaj" target="_blank">放光明</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/5?pxctovz" target="_blank">新纪元</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/6?bgmejdq" target="_blank">希望之声</a> | <a href="https://doqmgyop4u892.cloudfront.net/11?hqgmp" target="_blank">无界网络</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/Pueji?clqmg" target="_blank">追查国际</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/16?krbgkfe" target="_blank">明慧之窗</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/LdvzZ?zjvdk" target="_blank">细语人生</a> | <a href="https://dol9bue5bysdj.cloudfront.net/fBn3r?cinyn" target="_blank">新世纪影视</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/PUWMb?xlhitd" target="_blank">江峰时刻</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/8?wbhgyvbuk" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290766.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14283147-GettyImages-2159774236-320x200.jpg"><p align="center">中国九省洪灾严重 七大水系预计将发生洪水</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290766.md#1" title="中国九省洪灾严重 七大水系预计将发生洪水""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14283147-GettyImages-2159774236-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1" title="新西兰总理：将更多揭露中共间谍活动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290918-AFP__20240710__2161380146__v3__Preview__WorldLeadersAttendNatoSummitInWashingtonDC-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290708.md#1" title="组图：法国国庆节 2024巴黎奥运火炬亮相""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290720-GettyImages-2161381229-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1" title="川普遇袭后 拜登讲话：暴力在美国无立足地""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291035.md#1">加拿大原住民议员团将访台 亲赴部落深度探访</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291043.md#1">索马里首都爆汽车炸弹袭击 至少5死20伤</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290977.md#1">华为发债10亿 多款手机近期行情暴跌</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291147.md#1">谢淑薇温网混双夺冠 生涯第9座大满贯双打金杯入袋</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291035.md#1">加拿大原住民议员团将访台 亲赴部落深度探访</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291043.md#1">索马里首都爆汽车炸弹袭击 至少5死20伤</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290977.md#1">华为发债10亿 多款手机近期行情暴跌</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291086.md#1">爱飞扬华语文中心举办2024台湾文化导览</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291028.md#1">中国第二季GDP增速放缓远逊预期 专家分析</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290766.md#1">中国九省洪灾严重 七大水系预计将发生洪水</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291063.md#1">华运会排舞比赛  舞态生风竞技艺</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291024.md#1">睽违16年 华运会重启撞球比赛</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1">新西兰总理：将更多揭露中共间谍活动</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290989.md#1">用这一物可以让老鼠逃离花园 你身上就有</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
@@ -112,7 +112,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,208,520 人
+!共 433,209,678 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1">CECC幕僚长：阻中共活摘 确保美企不被利用</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291028.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14291041-GettyImages-2161038780-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291028.md#1">中国第二季GDP增速放缓远逊预期 专家分析</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1">三退声明精选（2024/07/14）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
